Fix styling error on mobile

--- a/_shared/in-page/shared-styling.scss
+++ b/_shared/in-page/shared-styling.scss
@@ -43,6 +43,8 @@ body {
     color: black;
     text-decoration: none;
     text-wrap: nowrap;
+    overflow: visible;
+    text-align: right;
     margin-right: 2%;
     @include font-size(1.5rem);
 }
